# acpied

./: Cargo.toml  Makefile  README.md
scripts/: acpied-apply  acpied-init
src/: lib.rs  main.rs  term.rs  web.rs
