[package]
name = "acpied"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
tui = "0.19.0"
crossterm = "0.25.0"
tui-textarea = { version = "*", features = ["search"] }
file_diff = "1.0.0"
clap = { version = "4.1.8", features = ["derive"] }
chrono = "0.4.24"
